<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createFile">

    <EditText
        android:id="@+id/et_name"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:autofillHints=" " />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginTop="50dp"
        android:hint="@string/hint" />

    <Button
        android:id="@+id/b_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/button" />
</RelativeLayout>