<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/create_txt_file"
        />

    <Button
        android:id="@+id/button2"
        android:gravity="center"
        android:layout_marginTop="400dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/open_existing_file" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="times"
        android:padding="20dp"
        android:text="@string/group_9_oop_text_editor_project"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>